fix: - '.button_sibmit' font size and '.button_submit_inner' letter-spacing; - '.button-filled' font-size.

--- a/src/components/button-rate/_button-rate.scss
+++ b/src/components/button-rate/_button-rate.scss
@@ -2,7 +2,7 @@
   @include isFlex($direction: row-reverse);
   width: 120px;
   height: 24px;
-  margin: 0;
+  margin-top: -2px;
   font-size: 29px;
   line-height: 21px;
   cursor: pointer;
